--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,5 @@
 title: Longwood University Anatomy and Physiology Lab Manual
 description: For students in BIOL 206 and 207
-theme: cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
