--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,5 +3,6 @@ description: For Longwood University students in BIOL 206 and 207
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
+- jekyll-seo-tag
 github:
   is_project_page: false
